# force-fetcher-cli

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
swapi/: __main__.py  app_commands.py  logger.py
tests/test_swapi/: test_swapi_cli_with_cli_runner.py
